# GSOC15-Kitchen-Activity-Games

./: CMakeLists.txt  README.md  client_main.cc  main_window.cc  main_window.hh  server_main.cc
include/: MainWindow.hh  PlayList.hh
plugins/client/helloWorld/: CMakeLists.txt  system_gui.cc
src/: ClientMain.cc  MainWindow.cc  MinimalClientMain.cc  PlayList.cc  ServerMain.cc
src/serverPlugin_helloWorld/: CMakeLists.txt  hello_world.cc
worlds/: T.sdf
